# Local_Deep_Research_Agent

./: README.md  pyproject.toml  test.py
tools/: crawl4ai_tool.py  exa.py
