[project]
name = "local-llm-function-call"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.7.4",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.31",
    "langgraph>=0.6.6",
    "llama-cpp-python>=0.3.16",
    "loguru>=0.7.3",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]
